fixed alignment issues for desktop view and reponsive issues for scoreboard section

--- a/styleSheets/home.css
+++ b/styleSheets/home.css
@@ -111,9 +111,10 @@ margin-left: 10px;
     background-color: #ff0000;
     color: white;
     border-radius: 25px;
-    padding: 10px;
+    padding: 2vw;
     width: 90%;
     height: 90%;
+    margin-left: 5%;
 }
 
 
@@ -125,7 +126,7 @@ margin-left: 10px;
     grid-area: 3 / 2 / 4 / 3;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
 }
 
 #home-scoreboards {
@@ -139,8 +140,7 @@ margin-left: 10px;
 
 #home-scoreboards p {
     color: white;
-    margin-bottom: 10px;
-    margin-top: -10px;
+    margin-bottom: 1vw;
 }
 
 #player-1-2-scoreboard {
@@ -150,16 +150,16 @@ margin-left: 10px;
 
 .scoreboard-buttons {
     border-radius: 7px;
-        padding: 2px 5px;
-        font-size: 1.25vw;
+    padding: 2px 5px;
+    font-size: 1.25vw;
 }
 
 #home-scoreboards label {
-        font-size: 1.5vw;
+    font-size: 1.5vw;
 }
         
 .scoreboardInput {
-font-size: 1.5vw;
+    font-size: 1.5vw;
 }
 
 #reset-button {
@@ -301,6 +301,30 @@ font-size: 1.5vw;
 .play-button:hover {
     opacity: 0.9;
     font-size: 50%;
+}
+
+@media only screen and (max-width: 680px) {
+    main {
+        display: flex;
+        flex-direction: column;
+        width: 80%;
+        margin-left: 10%;
+    }
+
+    #home-set-up-pic img {
+        width: 100px;
+    }
+
+    #home-scoreboards p {
+        margin-bottom: 10px;
+        margin-top: 5px;
+    }
+
+    #home-oh-shoot-section {
+        width: 72%;
+        margin-left: 14%;
+    }
+
 }
 
 @media only screen and (max-device-width: 480px) {
